# programming-haskell

./: CHANGELOG.md  LICENSE  README.md  programming-haskell.cabal  setup.mjs
src/01/: exercise.hs  main.hs
src/02/: exercise.hs  main.hs
src/03/: exercise.hs  main.hs
src/04/: exercise.hs  main.hs
src/05/: caesar.hs  exercise-caesar.hs  exercise.hs  main.hs
src/06/: exer01.hs  exer02.hs  exer03.hs  exer04.hs  exer06a.hs  exer06b.hs  exer06c.hs  exer06d.hs  exer06e.hs  exer07.hs  exer08.hs  exer09a.hs  exer09b.hs  exer09c.hs  main.hs
src/07/: ex01.hs  ex02a.hs  ex02b.hs  ex02c.hs  ex02d.hs  ex03.hs  ex04.hs  ex05a.hs  ex05b.hs  ex06.hs  ex07.hs  ex09.hs  ex10.hs  main.hs  vote.hs
src/08/: abstract-machine.hs  main.hs  tautology.hs
src/09/: count-down.hs
src/10/: hangman.hs  main.hs  nim.hs
